@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-06-21T02:06:22Z",
-  "count_outdated" : 265,
-  "uniques_outdated" : 231,
-  "count" : 266,
-  "uniques" : 232,
+  "timestamp" : "2025-07-04T02:09:56Z",
+  "count_outdated" : 266,
+  "uniques_outdated" : 232,
+  "count" : 267,
+  "uniques" : 233,
   "clones" : [
     {
-      "timestamp": "2025-06-15T00:00:00Z",
+      "timestamp": "2025-07-03T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
